--- a/src/index.css
+++ b/src/index.css
@@ -196,12 +196,12 @@ a {
 .mobile {
   display: none;
 }
-@media (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 600px){
   .main-container {
     flex-direction: column;
   }
   .intro-section {
-    margin: 0.5rem;
+    margin: 0.2rem;
     height: 95vh;
     width: 90vw;
   }
@@ -215,7 +215,13 @@ a {
     width: 90vw;
     margin-left: 2rem;
     margin-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
   }
+  .contact .txt {
+    width: 80%;
+  }
+
   .title-bar {
     display: none;
   }
@@ -231,5 +237,13 @@ a {
     width: 100%;
     height: 100%;
   }
-
+  .data-section {
+    margin: 0.2rem;
+    height: 95vh;
+    width: 90vw;
+  }
+  .contact {
+  width: 100%;
+  margin-left: 0px;
+  }
 }
