--- a/src/styles/Certificates.css
+++ b/src/styles/Certificates.css
@@ -31,3 +31,12 @@ h4 {
   margin: 0rem 0.2rem 0rem 0.2rem;
   text-align: left;
 }
+@media (min-width: 320px) and (max-width: 600px) {
+  .blocks {
+    margin-top: 0.5rem;
+  }
+  .spaces {
+    width: 10rem;
+    height: 4rem;
+  }
+}
