--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -48,7 +48,7 @@ input {
 
 .form textarea {
   margin-left: 0.4rem;
-  width: 100%;
+  width: 90%;
   margin-right: 0.6rem;
   border: 1.5px solid blue;
   border-radius: 0.6rem;
@@ -56,6 +56,7 @@ input {
   padding-left: 0.3rem;
   padding-right: 0.3rem;
   font-size: medium;
+  margin-top: 0.5rem;
 }
 
 .form label {
@@ -65,17 +66,12 @@ input {
 .contact-msg {
   height: 50%;
 }
-.contact-msg input {
-  height: 80%;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
 .contact-btn {
   margin-top: 1rem;
 }
 
 .form button {
-  width: 85%;
+  width: 95%;
   height: 2.5rem;
   background-image: linear-gradient(blue,rgb(34, 12, 55));
 
@@ -86,4 +82,24 @@ input {
 .form button:focus {
   background-image: linear-gradient(blue);
 }
-
+.msg {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+@media (min-width: 320px) and (max-width: 600px) {
+  .form {
+  position: relative;
+  top: -25rem;
+  background-color: rgba(34, 12, 55, 0.6);
+  width: 100%;
+  height: 25%;
+  border: 0.1rem solid rgb(77, 77, 226);
+  margin: 0rem;
+  z-index: 0;
+}
+.contact-main {
+  background: none;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+}
