--- a/src/styles/Certificates.css
+++ b/src/styles/Certificates.css
@@ -31,11 +31,15 @@ h4 {
   margin: 0rem 0.2rem 0rem 0.2rem;
   text-align: left;
 }
+.spaces {
+  display: none;
+}
 @media (min-width: 320px) and (max-width: 600px) {
   .blocks {
     margin-top: 0.5rem;
   }
   .spaces {
+    display: block;
     width: 10rem;
     height: 4rem;
   }
